--- a/rootdir/etc/init.xiaomi.rc
+++ b/rootdir/etc/init.xiaomi.rc
@@ -12,3 +12,7 @@ on boot
 on property:vendor.post_boot.parsed=1
     # Configure CPU input boost
     write /sys/devices/system/cpu/cpu_boost/input_boost_freq "0:1612800"
+
+    # optimize for some games
+    write /proc/sys/kernel/sched_lib_name "com.miHoYo., com.activision., UnityMain, libunity.so, libil2cpp.so, libfb.so"
+    write /proc/sys/kernel/sched_lib_mask_force 240
